Fix overflow issue

--- a/base/static/base/css/style.sass
+++ b/base/static/base/css/style.sass
@@ -427,12 +427,15 @@ body
 
 .section--portolio .items
   position: relative
-  overflow: hidden
+  overflow: initial
   width: 100%
   height: 60vh
 
   @media (min-width: $tablet)
     height: 80vh
+
+  .section__content
+    overflow: initial
 
 .portfolio-item
   position: absolute
